@@ -1,29 +1,41 @@
 package com.englishweb.english_web_be.service;
 
+import com.englishweb.english_web_be.dto.TopicAnswerDTO;
 import com.englishweb.english_web_be.dto.TopicQuestionDTO;
 import com.englishweb.english_web_be.model.TopicQuestion;
 import com.englishweb.english_web_be.repository.TopicQuestionRepository;
+import com.englishweb.english_web_be.util.ValidationUtils;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TopicQuestionService extends BaseService<TopicQuestion, TopicQuestionDTO, TopicQuestionRepository> {
     private final TopicService topicService;
-    TopicAnswerService topicAnswerService;
+    private final TopicAnswerService topicAnswerService;
 
-    public TopicQuestionService(TopicQuestionRepository repository, TopicAnswerService topicAnswerService, TopicService topicService) {
+    public TopicQuestionService(TopicQuestionRepository repository, TopicAnswerService topicAnswerService, @Lazy TopicService topicService) {
         super(repository);
         this.topicAnswerService = topicAnswerService;
         this.topicService = topicService;
     }
 
-    public List<TopicQuestionDTO> retrieveTopicQuestionByTopicId(String topicId) {
+    public List<TopicQuestionDTO> findTopicQuestionByTopicId(String topicId) {
+        ValidationUtils.getInstance().validateExistId(topicService.repository, topicId);
         List<TopicQuestion> list = repository.findAllByTopic_Id(topicId);
         return list.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public void delete(String id){
+        List<TopicAnswerDTO> answerDTOList = topicAnswerService.findAllByQuestionId(id);
+        for(TopicAnswerDTO answerDTO : answerDTOList){
+            topicAnswerService.delete(answerDTO.getId());
+        }
+        super.delete(id);
     }
 
     @Override
